# SIFAST_app

./: main.py  pyproject.toml
app/: __init__.py  main_window.py  styles.py
app/processing/: __init__.py  processor.py
app/utils/: __init__.py  icons.py
app/widgets/: __init__.py  collapsible_group.py  isosurface_controls.py  log_dock.py  parameter_panel.py  parameter_widgets.py  plot_widgets.py  visualization_panel.py
config/: setting_fiber_calibration.csv
config/10PW/: reference_parameters.json
config/20231226/: setting_fiber_calibration.csv
config/STOV/: reference_parameters.json
config/device/2025-04-22_14-17-38/: reference_parameters.json
config/device/2025-04-22_15-29-17/: reference_parameters.json
config/device/20250424/: setting_fiber_calibration.csv
config/fiber_array/: Fiber_array_14x14_1.1.json
data/SIFAST/20241212/l=1/high resolution/0/: inter.h5  processing_history.md  ref.h5  unk.h5
data/SIFAST/20241212/l=1/high resolution/1/: inter.h5  ref.h5  (+2 more)
data/SIFAST/20241212/l=1/low resolution/: inter.h5  processing_history.md  ref.h5  unk.h5
data/SRSI/20231226/参考标定/: inter.txt  ref.txt  unk.txt
pypulse/: __init__.py  base.py  fiber_array.py  sifast.py  srsi.py  utils.py
pypulse/config/: settings.py
pypulse/core/: base.py  pulse.py  transforms.py
pypulse/fiber/: array.py  registry.py
pypulse/io/: __init__.py  converters.py  logging.py  readers.py  writers.py
pypulse/processing/: sifast.py  spatial_scan.py  srsi.py
pypulse/utils/: math.py  serialization.py
pypulse/visualization/: plotting.py
tests/pypulse/: test_sifast.py
(+33 files in other folders)
